# FixedPoint

./: CMakeLists.txt  README.md
include/: fixed16_16_raw.hpp
src/: test.cpp
